# gameplay3d

./: README.md
external-deps/include/: zconf.h
gameplay/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  gameplay.vcxproj  gameplay.vcxproj.filters
gameplay/src/: AFont.cpp  AFont.h  Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationTarget.cpp  AnimationTarget.h  Animations.cpp  Animations.h  AudioController.cpp  AudioSource.cpp  Bundle.cpp  Bundle.h  Conversion.cpp  Conversion.h  FileSystem.cpp  Font.cpp  Font.h  Label.cpp  Label.h  Light.cpp  Light.h  MaterialParameter.cpp  MeshSkin.cpp  Node.cpp  Node.h  PlatformAndroid.cpp  PlatformLinux.cpp  PlatformWindows.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SpriteBatch.cpp  SpriteBatch.h  TextBox.cpp  TextBox.h  Texture.cpp  Texture.h  (+5 more)
gameplay/src/lua/: lua_Button.cpp  lua_CheckBox.cpp  lua_Label.cpp  lua_RadioButton.cpp  lua_Slider.cpp  lua_TextBox.cpp
samples/browser/: sample-browser.vcxproj  sample-browser.vcxproj.filters
samples/browser/MyApplication/: gradle.properties
samples/browser/MyApplication/app/: build.gradle
samples/browser/MyApplication/app/src/main/: AndroidManifest.xml
samples/browser/MyApplication/gradle/wrapper/: gradle-wrapper.properties
samples/browser/android/: gradle.properties
samples/browser/android/app/: CMakeCache.txt  CMakeLists.txt  build.gradle  cmake_install.cmake
samples/browser/android/app/src/main/: AndroidManifest.xml
samples/browser/android/app/src/main/assets/res/ui/: default.theme
samples/browser/android/app/src/main/cpp/: native-lib.cpp
samples/browser/res/common/: dude.gpb  dude.material  spearman2.gpb  spearman2.material
samples/browser/res/design/: box.fbx  duck.fbx  physics.fbx  scene.fbx  sphere.fbx
samples/browser/src/: FontSample.cpp  FontSample.h  FormsSample.cpp  LoadNodeSample.cpp  LoadNodeSample.h  ParticlesSample.cpp  SpriteBatchSample.cpp
samples/character/: sample-character.vcxproj
samples/character/android/app/: CMakeLists.txt  build.gradle  cmake_install.cmake
samples/character/android/app/src/main/: AndroidManifest.xml
samples/character/android/gradle/wrapper/: gradle-wrapper.properties
samples/character/res/common/: sample.gpb  sample.material
samples/character/res/design/: boy.fbx  boy.mb  scene-encode.bat
samples/character/src/: CharacterGame.cpp
samples/racer/: sample-racer.vcxproj  sample-racer.vcxproj.filters
samples/racer/android/app/: CMakeLists.txt  build.gradle  cmake_install.cmake
samples/racer/res/common/: racer.scene
samples/racer/res/design/: encode-scene.bat
samples/racer/src/: RacerGame.cpp
samples/spaceship/: sample-spaceship.vcxproj
samples/spaceship/android/app/: CMakeLists.txt  build.gradle  cmake_install.cmake
samples/spaceship/android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
samples/spaceship/res/: airstrip.gpb  spaceship.fbx
samples/spaceship/res/ui/: arial.gpb
tools/encoder/: gameplay-encoder.vcxproj
tools/encoder/FBX/FBX Extensions SDK/2019.5/: License.rtf  readme.txt
tools/encoder/FBX/FBX Extensions SDK/2019.5/include/: fbxsdk.h
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/: CMakeSettings.txt
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/customsurface/: CMakeLists.txt  maxcustomsurfaceplugin.cxx  maxextension.h  mayacustomsurfaceplugin.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/customxform/: CMakeLists.txt  maxcustomxformplugin.cxx  mayacustomxformplugin.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/readerwritercollada/: CMakeLists.txt  colladaplugin.cxx  fbxcolladaanimationelement.cxx  fbxcolladaelement.cxx  fbxcolladaiostream.cxx  fbxcolladanamespace.cxx  fbxcolladautils.cxx  fbxreadercollada14.cxx  fbxwritercollada14.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/readerwritercustom/: CMakeLists.txt  myreaderwriterplugin.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/readerwriterfbx5/: CMakeLists.txt  fbx5plugin.cxx  fbxreaderfbx5.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/readerwriterfbx6/: CMakeLists.txt  fbx6plugin.cxx  fbxreaderfbx6.cxx  fbxwriterfbx6.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/readerwriterfbx7/: CMakeLists.txt  fbx7plugin.cxx  fbxreaderfbx7.cxx  fbxwriterfbx7.cxx
tools/encoder/FBX/FBX Extensions SDK/2019.5/plugins/simple/: CMakeLists.txt  maxcustomdataplugin.cxx  mayacustomdataplugin.cxx  mayaextension.h
tools/encoder/FBX/FbxParser-master/FbxParser/: CameraManager.cpp  FbxParser.cpp  FbxParser.vcxproj  ModelReconstruct.cpp  ModelReconstruct.h  VBOMesh.h  dude.fbx  main.cpp  scene.fbx  spearman2.fbx
tools/encoder/FBX/FbxParser-master/freeglut-3.0.0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CallbackMaker.vcxproj  CallbackMaker_static.vcxproj  CallbackMaker_static.vcxproj.filters  Fractals.vcxproj  Fractals.vcxproj.filters  Fractals_random.vcxproj  Fractals_random.vcxproj.filters  Fractals_random_static.vcxproj  Fractals_static.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  Lorenz.vcxproj  Lorenz.vcxproj.filters  Lorenz_static.vcxproj  One.vcxproj  One_static.vcxproj  One_static.vcxproj.filters  Resizer.vcxproj  Resizer.vcxproj.filters  Resizer_static.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  freeglut.sln  freeglut.vcxproj  freeglut.vcxproj.filters  freeglut_static.vcxproj  multi-touch.vcxproj  multi-touch.vcxproj.filters  multi-touch_static.vcxproj  shapes.vcxproj  shapes_static.vcxproj  shapes_static.vcxproj.filters  smooth_opengl3.vcxproj  smooth_opengl3.vcxproj.filters  smooth_opengl3_static.vcxproj  subwin.vcxproj  (+5 more)
tools/encoder/FBX/openfbx/demo/: main.cpp
tools/encoder/FBX/openfbx/projects/: OpenFBX.sln  openfbx.vcxproj  openfbx.vcxproj.filters
tools/encoder/FBX/openfbx/runtime/: imgui.ini  spearman2.fbx
tools/encoder/FBX/openfbx/src/: ofbx.cpp
tools/encoder/src/: Animations.cpp  EncoderArguments.cpp  EncoderArguments.h  FBXSceneEncoder.cpp  FBXSceneEncoder.h  FileIO.cpp  TTFFontEncoder.cpp  TTFFontEncoder.h  main.cpp
(+21 files in other folders)
